## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

EXTRA_DIST = \
	glite-wms-clean-lm-recycle.sh.in \
	glite-wms-jc.in \
	glite-wms-lm.in

jsdir = $(sysconfdir)/$(initdir)
js_SCRIPTS = glite-wms-jc glite-wms-lm

libexec_SCRIPTS = glite-wms-clean-lm-recycle.sh

MAINTAINERCLEANFILES = Makefile.in *~ *.*~

