## *********************************************************************
## *
## * Copyright (c) 2002 CERN and INFN on behalf of the EU DataGrid.
## * For license conditions see LICENSE file or
## * http://www.edg.org/license.html
## *
## *********************************************************************

jobcontroldir = $(includedir)
nobase_jobcontrol_HEADERS = \
        glite/wms/jobcontrol/SubmitAdapter.h 

MAINTAINERCLEANFILES = Makefile.in
